# libxc-rs

./: Cargo.toml  README.md
libxc-sys/: Cargo.toml  build.rs
src/: error.rs  functional.rs  lib.rs  util.rs
