[package]
name = "libxc"
version = "0.1.0"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"
description = "Rust bindings to libxc."
repository = "https://github.com/seatonullberg/libxc-rs"
license = "MPL-2.0"
categories = ["science"]
keywords = ["density-functional-theory", "exchange-correlation"]

[dependencies]
libc = "0.2"
libxc-sys = { path = "libxc-sys" }
thiserror = "1.0"