[package]
name = "libxc-sys"
version = "0.1.1"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Raw Rust bindings to libxc."
repository = "https://github.com/seatonullberg/libxc-rs"
categories = ["external-ffi-bindings", "science"]

[lib]
path = "lib.rs"
name = "libxc_sys"

[build-dependencies]
bindgen = "0.59"